--- a/menu/birra/breaking-hops-double-ipa.html
+++ b/menu/birra/breaking-hops-double-ipa.html
@@ -63,7 +63,7 @@
                             <h6 class="by-line">Foto <a href="http://www.mc-77.com/" target="_blank">Birrificio MC-77</a></h6>
                         <div class="share-block">
                             <h6 class="by-line" ><span data-tooltip aria-haspopup="true" class="has-tip" title="% di alcool in volume.">ABV:</span> 7,9% | <span data-tooltip aria-haspopup="true" class="has-tip" title="Misura dell'amaro. Da 0-non amaro a 100-amaro. l’IBU non indica in assoluto l’amarezza della birra: nelle birre con più corpo, a un alto IBU corrisponde una maggiore quantità di malto, per bilanciare il gusto.">IBU's:</span> </h6>
-                            <h6 class="by-line">COLORE: Dorato | SAPORE: Amaro</h6>
+                            <h6 class="by-line">COLORE: Ambrato | SAPORE: Amaro</h6>
                             <h6 class="by-line">MALTO: | LUPPOLO: USA, Nuova Zelanda </h6>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
             <p>Birra ambrata, in stile double IPA. La frutta esotica e l'amaro dei luppoli americani e neo-zelandesi dominano prepotenti il gusto persistente di questa birra.</p>
             <p>Finale lungo e amaro.</p>
             <h2>Con cosa assaggiarla</h2>
-            <p>Ideale con <a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html" target="_blank">Costine in salsa BBQ</a></p>  
+            <p>Ideale con <a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html" target="_blank">Costine in salsa BBQ</a>.</p>  
         </div>
     </div>
 <!-- fine articolo -->
