--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h1 class="text-center" itemprop="description">Per chi, come noi, ama la birra artigianale e il buon cibo</h1>
             </div>
             <div class="small-centerd small-12  medium-6 large-6 columns">
-                <img src="http://beerstrot.it/asset/img/medium/birreria.jpg" alt="">
+                <img src="http://beerstrot.it/asset/img/medium/birreria.jpg" alt="Birreria">
             </div>  
         </div>
         <div class="row show-for-small-only extra-space">
@@ -67,7 +67,7 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <a role="button" href="http://beerstrot.it/menu/"><img src="http://beerstrot.it/asset/img/medium/tris-mini-hamburger.jpg" alt="" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/menu/"><img src="http://beerstrot.it/asset/img/medium/tris-mini-hamburger.jpg" alt="Hamburger" class="extra-space-image-tab-home"></a>
             </div>
             <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
@@ -84,7 +84,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/asset/img/medium/costine-in-salsa-bbq.jpg" alt="" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/asset/img/medium/costine-in-salsa-bbq.jpg" alt="Costine in Salsa BBQ" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
                 <p>A Beerstrot facciamo un sacco di eventi:</p>
@@ -142,7 +142,7 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <a role="button" href="http://beerstrot.it/blog/"><img src="http://beerstrot.it/asset/img/medium/birre-in-love.jpg" alt="" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/blog/"><img src="http://beerstrot.it/asset/img/medium/birre-in-love.jpg" alt="Birre in Love" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
