--- a/menu/index.html
+++ b/menu/index.html
@@ -533,7 +533,7 @@
             <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
                 <!-- <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00"> -->
-                <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-23:00">
+                <meta itemprop="openingHours" content="Tu,We,Th 18:00-23:00">
                 <meta itemprop="openingHours" content="Fr,Sa 18:00-01:00">
                 <meta itemprop="openingHours" content="Su 12:00-18:00">
                 <div class="row">
@@ -541,7 +541,7 @@
                         <p>Mar-Gio</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
-                        <!-- <p>12&ensp;&ndash;&ensp;14
+                        <p><!--12&ensp;&ndash;&ensp;14
                             <br> -->18&ensp;&ndash;&ensp;23
                         </p>
                     </div>
