--- a/contatti/index.html
+++ b/contatti/index.html
@@ -207,12 +207,16 @@
                             <br> -->18&ensp;&ndash;&ensp;23
                         </p>
                     </div>
+                </div>
+                <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
                         <p>Ven-Sab</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p>18&ensp;&ndash;&ensp;01</p>
                     </div>
+                </div>
+                <div class="row">    
                     <div class="large-5 medium-5 small-6 columns">
                         <p>Domenica</p>
                     </div>
