--- a/menu/index.html
+++ b/menu/index.html
@@ -227,15 +227,15 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/beeramisu.html">Beeramisù<span class="right">5,5</span></a></h3>
-                                <p>Tiramisù alla birra IPA</p>
+                                <p>Tiramisù alla birra stout</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/cheescake.html">Cheescake<span class="right">5</span></a></h3>
-                                <p>Cheescake stile New York, con gelatina alla birra stout.</p>
+                                <p>Cheescake stile New York, con gelatina alla birra IPA.</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Torta pere e cioccolato<span class="right">4</span></a></h3>
-                                <p>Torta di cioccolato fondente con pere</p>
+                                <p>Torta di pere con scaglie di cioccolato fondente</p>
                             </li>
                         </ul>
                     </div>
