--- a/menu/index.html
+++ b/menu/index.html
@@ -235,7 +235,7 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Torta pere e cioccolato<span class="right">4</span></a></h3>
-                                <p>Torta di pere con scaglie di cioccolato fondente</p>
+                                <p>Torta con pere e scaglie di cioccolato fondente</p>
                             </li>
                         </ul>
                     </div>
