--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -79,7 +79,7 @@
                 <h2>Un evento per tossici della birra, hamburger e non solo</h2>
                 <p>Per il ciclo: Si parte.</p>
                 <p>Piccolo rinfresco con amici. Comincia ad assaporare il <strong>Gusto in Fermento</strong>.</p>
-                <p>Giulia, Andrea e Giovanni vi aspettano dalle 17 per un piccolo rinfresco di apertura.</p>
+                <p>Giulia, Andrea e Giovanni vi aspettano Giovedì 30 Aprile dalle 17:00 alle 19:00 per un piccolo rinfresco di apertura.</p>
                 <p>Dal 1 Maggio potrete gustare le fantastiche birre artigianali e i succulenti piatti preparati da Giovanni e Jacopo a partire dalle 12:00.</p>
 <!-- call to action inizio -->
                 <div class="row">
