--- a/menu/index.html
+++ b/menu/index.html
@@ -198,7 +198,7 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">3</span></a></h3>    
-                                <p>Patate fritte tagliate a mano con la buccia</p>
+                                <p>Patate fritte con la buccia tagliate a mano </p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">3,5</span></a></h3>    
