--- a/chi-siamo/team/giulia-mazza.html
+++ b/chi-siamo/team/giulia-mazza.html
@@ -48,7 +48,7 @@
         </div>
         <div class="row">
             <div class="medium-10 large-9 columns extra-space">
-                <h1>Giulia Maza</h1>
+                <h1>Giulia Mazza</h1>
                 <p class="by-line">Fondatrice di Beerstrot e blogger in charge</p>
                 <blockquote>
                     <p>Scrivo di birra e mi piace berla di brutto. ma solo birra artigianale. <br>Tutte le foto sono fatte con un iphone 4s e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
