--- a/menu/index.html
+++ b/menu/index.html
@@ -109,11 +109,11 @@
                         <h2 class="subheader">Pasta <br><small>Pasta fresca fatta in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Tortelloni<span class="right">6</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Tortelloni<span class="right">6,5</span></a></h3>    
                                 <p>Tortelloni ricotta e spinaci con burro e salvia</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Linguine al limone<span class="right">6</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Linguine al limone<span class="right">6,5</span></a></h3>    
                                 <p>Linguine di riso con panna e scorze di limone</p>
                             </li>
                         </ul>                      
@@ -140,34 +140,34 @@
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Hamburger <br><small>Piatto unico, servito con patate, insalata e fagioli. Pane di nostra produzione.</small></h2>
+                        <h2 class="subheader">Hamburger <br><small>Piatto unico, servito con patate, insalata e fagioli cannellini. Pane di nostra produzione.</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/classico.html">New York<span class="right">7,5</span></a></h3>    
                                 <p>180 grammi di manzo, cipolla caramellata, insalata, fontina</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,75</span></a></h3>    
                                 <p>180 grammi di manzo, salsa piccante, pancetta, cheddar, rucola</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,5</span></a></h3> 
+                                <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">9,25</span></a></h3> 
                                 <p>180 grammi di manzo, pancetta, mozzarella di bufala, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8</span></a></h3> 
+                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8,75</span></a></h3> 
                                 <p>180 grammi di manzo, melanzane, pomodori, formaggio di capra, rucola</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamb<span class="right">8.5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamb<span class="right">9,25</span></a></h3>    
                                 <p>180 grammi di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">10.5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">12,5</span></a></h3>    
                                 <p>180 grammi di salmone, doppia panna, aneto, limone, rucola</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Cecilia<span class="right">8</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Cecilia<span class="right">7,5</span></a></h3>    
                                 <p>150 grammi di ceci, composta leggermente piccante di verdure e menta, rucola</p>
                             </li>
                         </ul>                      
@@ -197,12 +197,12 @@
                         <h2 class="subheader">Contorni</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">3</span></a></h3>    
-                                <p>Patate fritte con la buccia tagliate a mano </p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">3,25</span></a></h3>    
+                                <p>Patate fritte con la buccia e tagliate a mano</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">3,5</span></a></h3>    
-                                <p>Patate cotte al forno con aglio e rosmarino</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">3,75</span></a></h3>    
+                                <p>Patate al forno con la buccia, aglio, rosmarino e tagliate a mano</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/fagiolini-al-rosmarino.html">Fagioli al rosmarino<span class="right">2,5</span></a></h3>    
