--- a/menu/index.html
+++ b/menu/index.html
@@ -144,22 +144,22 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/classico.html">New York<span class="right">7,5</span></a></h3>    
-                                <p>180 grammi di manzo, cipolla caramellata, insalata, fontina</p>
+                                <p>180 grammi di manzo, cipolla caramellata, insalata, cheddar</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,75</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,5</span></a></h3>    
                                 <p>180 grammi di manzo, salsa piccante, pancetta, cheddar, rucola</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">9,25</span></a></h3> 
-                                <p>180 grammi di manzo, pancetta, mozzarella di bufala, pomodorini confit</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,75</span></a></h3> 
+                                <p>180 grammi di manzo, pancetta, gorgonzola, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8,75</span></a></h3> 
+                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8</span></a></h3> 
                                 <p>180 grammi di manzo, melanzane, pomodori, formaggio di capra, rucola</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamb<span class="right">9,25</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamb<span class="right">8,75</span></a></h3>    
                                 <p>180 grammi di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
                             </li>
                             <li>
@@ -168,7 +168,7 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Cecilia<span class="right">7,5</span></a></h3>    
-                                <p>150 grammi di ceci, composta leggermente piccante di verdure e menta, rucola</p>
+                                <p>180 grammi di ceci, composta leggermente piccante di verdure e menta, rucola</p>
                             </li>
                         </ul>                      
                     </div>   
@@ -201,7 +201,7 @@
                                 <p>Patate fritte con la buccia e tagliate a mano</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">3,75</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">3,5</span></a></h3>    
                                 <p>Patate al forno con la buccia, aglio, rosmarino e tagliate a mano</p>
                             </li>
                             <li>
