--- a/menu/index.html
+++ b/menu/index.html
@@ -109,12 +109,12 @@
                         <h2 class="subheader">Pasta <br><small>Pasta fresca fatta in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Tortelloni<span class="right">6,5</span></a></h3>    
-                                <p>Tortelloni ricotta e spinaci con burro e salvia</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Maltagliati fave e pancetta<span class="right">6,5</span></a></h3>    
+                                <p>Fave, pancetta, pomodorini e finocchietto selvatico</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Linguine al limone<span class="right">6,5</span></a></h3>    
-                                <p>Linguine di riso con panna e scorze di limone</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Pasta del giorno<span class="right">6,5</span></a></h3>    
+                                <p>Dipende dagli ingredienti e verdure fresche che troviamo</p>
                             </li>
                         </ul>                      
                     </div>
@@ -197,7 +197,7 @@
                         <h2 class="subheader">Contorni</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">3,25</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">3,5</span></a></h3>    
                                 <p>Patate fritte con la buccia e tagliate a mano</p>
                             </li>
                             <li>
@@ -276,91 +276,75 @@
                         <h2 class="subheader">Birre artigianali in bottiglia</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Molotov Cocktail 65cl<span class="right">12,75</span></h3>
+                                <p>Fatta in America da Evil Twin. Imperial Double IPA con luppoli simcoe insolitamente dolci. Gradi ABV: 13%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Hipster Ale 33cl<span class="right">5,5</span></h3>
+                                <p>Fatta in America da Evil Twin. American Pale Ale molto classica con una confezione grandiosa. Gradi ABV: 5,5%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Black AIPA 50cl<span class="right">7</span></h3>
+                                <p>Fatta in Polonia da Birbant. American Indian Pale Ale scura. Gradi ABV: 6,5%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Citra Ipa 50cl<span class="right">6,5</span></h3>
+                                <p>Fatta in Polonia da Birbant. Indian Pale con luppoli citra. Tanti agrumi. Gradi ABV: 5,9%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Imperial Citra Ipa 50cl<span class="right">7</span></h3>
+                                <p>Fatta in Polonia da Birbant. Imperia Indian Pale con luppoli citra. Tanti agrumi e un amaro non preponderante grazie ai malti che si sentono tutti. Gradi ABV: 7,9%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>White AIPA 50cl<span class="right">6,5</span></h3>
+                                <p>Fatta in Polonia da Birbant. American Indian Pale Ale di colore ambrato. Tanti agrumi e un amaro molto preponderante, ma con un sottofondo dolce. Gradi ABV: 6,5%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Imperial Porter 33cl<span class="right">10,5</span></h3>
+                                <p>Fatta in Brasile da Tupiniquim Monjolo. Porter di colore scuro, molto liscia in bocca. Forti sentori di caffè, cioccolato caramello e note di vaniglia. Tanti agrumi e un amaro molto preponderante, ma con un sottofondo dolce. Gradi ABV: 10,5%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Lengenfeld Pils 33cl<span class="right">4</span></h3>
+                                <p>Fatta in Germania da Winkler. Pils. Sentori di erba, limone e un po' di arance. Una Pills fatta a regola d'arte. Gradi ABV: 4,7%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Lengenfeld Pils 50cl<span class="right">5</span></h3>
+                                <p>Fatta in Germania da Winkler. Pils. Sentori di erba, limone e un po' di arance. Una Pills fatta a regola d'arte. Gradi ABV: 4,7%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Beat Waizen 50cl<span class="right">5</span></h3>
+                                <p>Fatta in Italia da ELAV. Waizen ispirata dalle birre ad alta fermentazione tedesche. Aromi molto freschi grazie ai luppoli americani e neo zelandesi. Gradi ABV: 5,1%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Mikkeller single hope simcoe 33cl<span class="right">5</span></h3>
+                                <p>Fatta in Danimarca da Mikkeller. IPA della serie single hopes. Solo da bere. Gradi ABV: 6,9%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Mikkeller single hope centennial 33cl<span class="right">5</span></h3>
+                                <p>Fatta in Danimarca da Mikkeller. IPA della serie single hopes. Solo da bere. Gradi ABV: 6,9%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Lupulus Hopulus 33cl<span class="right">5,5</span></h3>
+                                <p>Fatta in America da Carlyle Brewing Co. Indian Pale Ale vera senza compromessi. Gradi ABV: 6,2%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Gulden Draak 33cl<span class="right">5,5</span></h3>
+                                <p>Fatta in Belgio da Brouwerij Van Steenberge. Belgian Strong Dark Ale. Ottima da gustare con i dolci. Bere con moderazione. Gradi ABV: 10,5%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Forum Gallorum 75cl<span class="right">12</span></h3>
+                                <p>Fatta in Italia da Birrificio Emiliano. Kolsh che reinterpreta la tradizione tedesca. Fresca termina con un ottimo amaro. Gradi ABV: 10,5%</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right">6</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Serie di birra cl33<span class="right">da 5 a 9</span></h3>
+                                <p>Fatta in Inghilterra da Buxton Brewery. Birre strepitose. Gradi ABV: da 6,2% a 13%</p>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
-<!-- birra fin e-->
+<!-- birra fine-->
 <!-- vino -->
         <section class="content" role="tabpanel" aria-hidden="false" id="vino">
             <div class="panel-menu-n">
