--- a/menu/index.html
+++ b/menu/index.html
@@ -109,8 +109,8 @@
                         <h2 class="subheader">Pasta <br><small>Pasta fresca fatta in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Maltagliati fave e pancetta<span class="right">6,5</span></a></h3>    
-                                <p>Fave, pancetta, pomodorini e finocchietto selvatico</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Gigli con fave e pancetta<span class="right">6,5</span></a></h3>    
+                                <p>Fave, pancetta croccante, pomodorini pachino e finocchietto selvatico</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Pasta del giorno<span class="right">6,5</span></a></h3>    
