--- a/menu/index.html
+++ b/menu/index.html
@@ -140,7 +140,7 @@
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Hamburger <br><small>Piatto unico, servito con patate, insalata e fagioli cannellini. Pane di nostra produzione.</small></h2>
+                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Pane di nostra produzione.</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/classico.html">New York<span class="right">7,5</span></a></h3>    
