--- a/menu/index.html
+++ b/menu/index.html
@@ -113,7 +113,7 @@
                                 <p>Fave, pancetta croccante, pomodorini pachino e finocchietto selvatico</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Pasta del giorno<span class="right">6,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Pasta del giorno<span class="right">7</span></a></h3>    
                                 <p>Dipende dagli ingredienti e verdure fresche che troviamo</p>
                             </li>
                         </ul>                      
@@ -181,11 +181,11 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine in Salsa BBQ<span class="right">9</span></a></h3>    
-                                <p>Costine di maiale in salsa barbeque</p>
+                                <p>Costine di maiale al forno in salsa barbeque</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wing.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
-                                <p>Alette di pollo servite con blu cheese</p>
+                                <p>Alette di pollo in salsa buffalo servite con crema di gorgonzola</p>
                             </li>
                         </ul>                      
                     </div>
@@ -198,14 +198,14 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">3,5</span></a></h3>    
-                                <p>Patate fritte con la buccia e tagliate a mano</p>
+                                <p>Patate fritte con la buccia tagliate a mano</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">3,5</span></a></h3>    
                                 <p>Patate al forno con la buccia, aglio, rosmarino e tagliate a mano</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/fagiolini-al-rosmarino.html">Fagioli al rosmarino<span class="right">2,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/fagiolini-al-rosmarino.html">Fagioli cannellini<span class="right">2,5</span></a></h3>    
                                 <p>Fagioli cannellini saltati al rosmarino</p>
                             </li>
                             <li>
@@ -226,7 +226,7 @@
                         <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/beeramisu.html">Beeramisù<span class="right">5,5</span></a></h3>
+                                <h3><a href="http://beerstrot.it/menu/cibo/beeramisu.html">Birramisù<span class="right">5,5</span></a></h3>
                                 <p>Tiramisù alla birra stout</p>
                             </li>
                             <li>
