--- a/menu/index.html
+++ b/menu/index.html
@@ -336,7 +336,7 @@
                                 <p>Fatta in Italia da Birrificio Emiliano. Kolsh che reinterpreta la tradizione tedesca. Fresca termina con un ottimo amaro. Gradi ABV: 10,5%</p>
                             </li>
                             <li>
-                                <h3>Serie di birra cl33<span class="right">da 5 a 9</span></h3>
+                                <h3>Serie di birre Buxton cl33<span class="right">da 5 a 9</span></h3>
                                 <p>Fatta in Inghilterra da Buxton Brewery. Birre strepitose. Gradi ABV: da 6,2% a 13%</p>
                             </li>
                         </ul>
