--- a/404.html
+++ b/404.html
@@ -107,9 +107,9 @@
             <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
                 <!-- <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00"> -->
-                <meta itemprop="openingHours" content="Tu,We,Th 18:00-23:00">
+                <meta itemprop="openingHours" content="Tu,We,Th, Su 18:00-23:00">
                 <meta itemprop="openingHours" content="Fr,Sa 18:00-01:00">
-                <meta itemprop="openingHours" content="Su 12:00-18:00">
+                <!-- <meta itemprop="openingHours" content="Su 12:00-18:00"> -->
                 <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
                         <p>Mar-Gio</p>
@@ -133,7 +133,7 @@
                         <p>Domenica</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
-                        <p>12&ensp;&ndash;&ensp;18</p>
+                        <p>18&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
                 <p><em>Chiuso il Lunedì</em></p>
